# Product-competitor-analysis

./: README.md  pyproject.toml  requirements.txt
src/competitor_analyst/: crew.py  feature.md  main.py  processing.md  report.md  swot.md
src/competitor_analyst/config/: agents.yaml
src/competitor_analyst/configs_old/: agents.yaml  tasks.yaml
src/competitor_analyst/db/: chroma.sqlite3
