[project]
name = "competitor_analyst"
version = "0.1.0"
description = "competitor_analyst using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
competitor_analyst = "competitor_analyst.main:run"
run_crew = "competitor_analyst.main:run"
train = "competitor_analyst.main:train"
replay = "competitor_analyst.main:replay"
test = "competitor_analyst.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
